fix alignment when out of bounds ad isn't displayed (aka on horizontal ipads)

--- a/static2/css/core/core.v2.css
+++ b/static2/css/core/core.v2.css
@@ -14,6 +14,21 @@
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
   }
 
+  .m-center {
+    max-width: 1072px;
+    margin-left: calc(50% - 1072px / 2) !important;
+    margin-right: calc(50% - 1072px / 2) !important;
+  }
+
+  /* center using padding */
+  .center {
+    max-width: 1072px;
+    padding-left: calc(50% - 1072px / 2);
+    padding-right: calc(50% - 1072px / 2);
+  }
+}
+
+@media (min-width: 1359px) {
   /* center using margin */
   .m-center {
     max-width: 1072px;
@@ -28,6 +43,7 @@
     padding-right: calc(55% - 1072px / 2);
   }
 }
+
 
 .clickable {
   cursor: pointer;
